--- a/apps/front/src/app/app.component.html
+++ b/apps/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <tui-root>
   <!-- content of your app -->
-
+<router-outlet></router-outlet>
   <!--
        If you need, you can add something between Taiga portal layers:
       -->
