--- a/libs/front/ui/calendar/src/lib/day/day.component.html
+++ b/libs/front/ui/calendar/src/lib/day/day.component.html
@@ -18,7 +18,7 @@
   <!-- Нижние слоты -->
   <div class="slot bottom-left"></div>
   <div class="slot bottom-middle">
-    
+    <lifestyle-timetracker-widget></lifestyle-timetracker-widget>
   </div>
   <div class="slot bottom-right">
     <ng-container *ngComponentOutlet="bottomRightSlot?.content || null"></ng-container>
