mvp for timetracker widget

--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.less
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.less
@@ -16,3 +16,11 @@
   font-size: 0.5rem;
   color: var(--tui-text-tertiary);
 }
+
+
+.small-text {
+  position: absolute;
+  font: var(--tui-font-text-ui-xs);
+  font-size: 0.5rem;
+  color: var(--tui-text-tertiary);
+}
