--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
@@ -1,4 +1,11 @@
-@let value = $value();
-@if (value.length) {
-    <tui-ring-chart [value]="value" size="s"></tui-ring-chart>
+@let value = $chartValue(); @if (value.length) {
+<tui-ring-chart [value]="value" [size]="$size()" [(activeItemIndex)]="index">
+  @if ($shouldBeVisible()) {
+  <div class="small-text">
+    <span>{{ seconds | secondsToHours }}</span>
+    <div>{{ label }}</div>
+  </div>
+  }
+</tui-ring-chart>
+
 }
