--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.less
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.less
@@ -2,9 +2,17 @@
 
 :host {
   display: block;
-  --tui-chart-categorical-00: #c779d0;
-  --tui-chart-categorical-01: #feac5e;
-  --tui-chart-categorical-02: #ff5f6d;
-  --tui-chart-categorical-03: #4bc0c8;
-  --tui-chart-categorical-04: #9795cd;
+  --tui-chart-categorical-00: #a75dd8;
+  --tui-chart-categorical-01: #ffda63;
+  --tui-chart-categorical-02: #8dda71;
+  --tui-chart-categorical-03: #ff6363;
+  --tui-chart-categorical-04: #b0b0b0;
+}
+
+
+.small-text {
+  position: absolute;
+  font: var(--tui-font-text-ui-xs);
+  font-size: 0.5rem;
+  color: var(--tui-text-tertiary);
 }
