wip day card dialog

--- a/apps/front/src/app/dashboard/dashboard.component.html
+++ b/apps/front/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<lifestyle-calendar [widgets]="widgets"></lifestyle-calendar>
+<lifestyle-calendar
+  [widgets]="widgets"
+  (dayOpenRequest)="openDayCard($event)"
+></lifestyle-calendar>
