--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
@@ -1,4 +1,6 @@
-@let value = $chartValue(); @if (value.length) {
+@let value = $chartValue();
+
+@if (value.length) {
 <tui-ring-chart [value]="value" [size]="$size()" [(activeItemIndex)]="index">
   @if ($shouldBeVisible()) {
   <div class="small-text">
