wip day card dialog

--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
@@ -1,1 +1,27 @@
-<p>DayCardDialog works!</p>
+<tui-tabs [(activeItemIndex)]="activeItemIndex">
+    <button
+        iconStart="@tui.credit-card"
+        tuiTab
+        type="button"
+        (click)="onClick('Maps')"
+    >
+        Maps
+    </button>
+    <button
+        disabled
+        iconStart="@tui.phone"
+        tuiTab
+        type="button"
+        (click)="onClick('Calls')"
+    >
+        Calls
+    </button>
+    <button
+        iconStart="@tui.settings"
+        tuiTab
+        type="button"
+        (click)="onClick('Settings')"
+    >
+        Settings
+    </button>
+</tui-tabs>
