adds widgets structure and widget registry

--- a/libs/front/ui/calendar/src/lib/day/day.component.html
+++ b/libs/front/ui/calendar/src/lib/day/day.component.html
@@ -1,4 +1,4 @@
-@let day = $day(); @let bottomRightSlot = $bottomRightSlot();
+@let day = $day(); @let bottomRightSlotWidget = $bottomRightSlotWidget();
 
 <div class="day">
   @if (day) {
@@ -28,7 +28,7 @@
   </div>
   <div class="slot bottom-right">
     <ng-container
-      *ngComponentOutlet="bottomRightSlot?.content || null"
+      *ngComponentOutlet="bottomRightSlotWidget"
     ></ng-container>
   </div>
   }
