uses a DI approach with dynamic components

--- a/apps/front/src/app/dashboard/dashboard.component.html
+++ b/apps/front/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <lifestyle-calendar
-  [widgets]="widgets"
+  [config]="$config()"
   (dayOpenRequest)="openDayCard($event)"
 ></lifestyle-calendar>
