--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
@@ -1,27 +1,12 @@
 <tui-tabs [(activeItemIndex)]="activeItemIndex">
-    <button
-        iconStart="@tui.credit-card"
-        tuiTab
-        type="button"
-        (click)="onClick('Maps')"
-    >
-        Maps
-    </button>
-    <button
-        disabled
-        iconStart="@tui.phone"
-        tuiTab
-        type="button"
-        (click)="onClick('Calls')"
-    >
-        Calls
-    </button>
-    <button
-        iconStart="@tui.settings"
-        tuiTab
-        type="button"
-        (click)="onClick('Settings')"
-    >
-        Settings
-    </button>
+  @for (tab of $tabs(); track $index) {
+  <button
+    [iconStart]="tab | widgetIcon | tuiIcon"
+    tuiTab
+    type="button"
+    (click)="onClick(tab)"
+  >
+    {{ tab | widgetName }}
+  </button>
+  }
 </tui-tabs>
