feat: add TimetrackerSettingsWidgetComponent and integrate with TimeTrackerWidget

--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
@@ -4,7 +4,7 @@
 <tui-ring-chart [value]="value" [size]="size" [(activeItemIndex)]="index">
   @if ($shouldBeVisible()) {
   <div class="small-text">
-    <span>{{ seconds | secondsToHours }}</span>
+    <span>{{ getSeconds() | secondsToHours }}</span>
     <div>{{ label }}</div>
   </div>
   }
