--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.less
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.less
@@ -1,3 +1,11 @@
+@import '@taiga-ui/core/styles/taiga-ui-local.less';
+
 :host {
-  display: block;
+  min-width: 350px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
