--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
@@ -1,9 +1,9 @@
 @let value = $chartValue();
 
 @if (value.length) {
-<tui-ring-chart [value]="value" [size]="size" [(activeItemIndex)]="index">
+<tui-ring-chart [value]="value" [size]="size" [(activeItemIndex)]="$index">
   @if ($shouldBeVisible()) {
-  <div class="small-text">
+  <div >
     <span>{{ getSeconds() | secondsToHours }}</span>
     <div>{{ label }}</div>
   </div>
