--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
@@ -2,47 +2,46 @@
 
 <tui-tabs [(activeItemIndex)]="activeItemIndex">
   @for (tab of $tabs(); track $index) {
-  <button
-    [iconStart]="tab | widgetIcon | tuiIcon"
-    tuiTab
-    type="button"
-    (click)="onClick(tab)"
-  >
-    {{ tab | widgetName }}
-  </button>
+    <button
+      [iconStart]="tab | widgetIcon | tuiIcon"
+      tuiTab
+      type="button"
+      (click)="onClick(tab)"
+    >
+      {{ tab | widgetName }}
+    </button>
   }
 </tui-tabs>
 
-
 @if (shownWidget) {
   <div class="widget-container">
-  @let component = shownWidget.component;
-  @let token = shownWidget.token;
-  @let settingsComponent = shownWidget.settingsComponent;
-  @let injector = createInjector(token);
+    @let component = shownWidget.component;
+    @let token = shownWidget.token;
+    @let settingsComponent = shownWidget.settingsComponent;
+    @let injector = createInjector(token);
 
-  <ng-container
-    [ngComponentOutlet]="component"
-    [ngComponentOutletInjector]="injector"
-  >
-  </ng-container>
+    <ng-container
+      [ngComponentOutlet]="component"
+      [ngComponentOutletInjector]="injector"
+    >
+    </ng-container>
 
-  <ng-container
-    *ngIf="settingsComponent"
-    [ngComponentOutlet]="settingsComponent"
-    [ngComponentOutletInjector]="injector"></ng-container>
+    <ng-container
+      *ngIf="settingsComponent"
+      [ngComponentOutlet]="settingsComponent"
+      [ngComponentOutletInjector]="injector"
+    ></ng-container>
   </div>
 }
 
-
 <div class="button-container">
-<button
-size="l"
-tuiButton
-type="button"
-class="button"
-appearance="secondary-grayscale"
->
-Save
-</button>
+  <button
+    size="l"
+    tuiButton
+    type="button"
+    class="button"
+    appearance="secondary-grayscale"
+  >
+    Save
+  </button>
 </div>
