feat(auth): implement authentication flow with login, registration, and user management features

--- a/apps/front/src/app/auth/auth.component.html
+++ b/apps/front/src/app/auth/auth.component.html
@@ -9,7 +9,7 @@
 
 @switch ($formMode()) {
   @case (AuthState.Login) {
-    login
+    <app-login [state]="state()" (userLoggedIn)="login($event)" />
   }
   @case (AuthState.SignUp) {
     sign up
