feat(auth): implement sign-up functionality with form validation and routing

--- a/apps/front/src/app/auth/auth.component.html
+++ b/apps/front/src/app/auth/auth.component.html
@@ -12,7 +12,7 @@
     <app-login [state]="state()" (userLoggedIn)="login($event)" />
   }
   @case (AuthState.SignUp) {
-    sign up
+    <app-sign-up [state]="state()" (userSignedUp)="signUp($event)" />
   }
   @default {
     <p>Please select a form to continue.</p>
