fix(settings): update tab tracking and adjust styles for better layout

--- a/apps/front/src/app/settings/settings.component.less
+++ b/apps/front/src/app/settings/settings.component.less
@@ -7,11 +7,12 @@
   flex-grow: 2;
 }
 
-tui-tabs.tabs::ng-deep {
+tui-tabs.tabs {
   flex-direction: column;
-  a {
-    padding: 1.5rem 1rem;
-  }
+}
+
+tui-tabs.tabs a {
+  padding: 1.5rem 1rem;
 }
 
 .container {
