--- a/apps/front/src/app/settings/settings.component.html
+++ b/apps/front/src/app/settings/settings.component.html
@@ -1,5 +1,5 @@
 <tui-tabs size="m" vertical="left" class="tabs">
-  @for (item of SETTING_URLS; track $index) {
+  @for (item of SETTING_URLS; track item.url) {
     <a routerLinkActive="active" tuiTab [routerLink]="item.url">
       {{ item.name }}
     </a>
