feat(settings): implement widget layout settings with dynamic slots and save functionality

--- a/apps/front/src/app/settings/settings.component.less
+++ b/apps/front/src/app/settings/settings.component.less
@@ -17,6 +17,7 @@ tui-tabs.tabs a {
 
 .container {
   flex-grow: 80;
+  height: 100vh;
 
-  border: 0.5px solid var(--tui-border-normal);
+  border-left: 0.5px solid var(--tui-border-normal);
 }
