feat: rename package to lifestyle-dashboard and update widget contracts
- Changed package name from @lifestyle-dashboard/source to lifestyle-dashboard in package.json.
- Updated tsconfig.base.json to include new widget-registry and widget-contracts paths.
- Added new library for widget contracts with interfaces and enums for widget management.
- Created widget registry to manage widget components and their settings.
- Added necessary configuration files for jest and eslint for the new libraries.

--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup" class="form">
+<form [formGroup]="form" class="form">
   @for (key of keys; track $index) {
     @let controlInfo = getControlInfo(key);
     @let title = controlInfo.title;
