--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
@@ -42,6 +42,7 @@
     type="button"
     class="button"
     appearance="secondary-grayscale"
+    (click)="save(shownWidget?.settingsComponent)"
     >
     Save
   </button>
