--- a/apps/front/src/app/auth/auth.component.less
+++ b/apps/front/src/app/auth/auth.component.less
@@ -4,6 +4,7 @@
   margin: auto;
 }
 
-[tuiTabs]:before, tui-tabs:before {
-    --t-color: var(--lifestyle-color);
+[tuiTabs]:before,
+tui-tabs:before {
+  --t-color: var(--lifestyle-color);
 }
