--- a/apps/front/src/app/auth/sign-up/sign-up.component.html
+++ b/apps/front/src/app/auth/sign-up/sign-up.component.html
@@ -8,10 +8,7 @@
       Type an email
       <input autocomplete="email" tuiTextfieldLegacy type="email" />
     </tui-input>
-    <tui-error
-      [formControlName]="SignUpField.Email"
-      [error]="[] | tuiFieldError | async"
-    />
+    <tui-error [formControlName]="SignUpField.Email" [error]="[] | tuiFieldError | async" />
   </p>
 
   <p>
@@ -23,10 +20,7 @@
       Type a password
       <input autocomplete="new-password" tuiTextfieldLegacy type="password" />
     </tui-input>
-    <tui-error
-      [formControlName]="SignUpField.Password"
-      [error]="[] | tuiFieldError | async"
-    />
+    <tui-error [formControlName]="SignUpField.Password" [error]="[] | tuiFieldError | async" />
   </p>
 
   <p>
