--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
@@ -1,5 +1,7 @@
 @let shownWidget = $shownWidget();
 
+{{date | date:'longDate'}}
+
 <tui-tabs [(activeItemIndex)]="activeItemIndex">
   @for (tab of $tabs(); track $index) {
     <button [iconStart]="tab | widgetIcon | tuiIcon" tuiTab type="button" (click)="onClick(tab)">
