--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-widget.component.html
@@ -1,7 +1,6 @@
 @let value = $chartValue();
-
 @if (value.length) {
-  <tui-ring-chart [value]="value" [size]="size" [(activeItemIndex)]="$index">
+  <tui-ring-chart [value]="value" [size]="$size()" [(activeItemIndex)]="$index">
     @if ($shouldBeVisible()) {
       <div>
         <span>{{ getSeconds() | secondsToHours }}</span>
